@@ -296,6 +296,7 @@ wxMSW:
 - Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).
 - Fix using "Alt" when wxGrid has focus (Dietmar Schwertberger, #24247).
 - Fix wxButton::GetDefaultSize() in high DPI under MSW (#24283).
+- Improve native MSW dialog DPI awareness (Maarten Bent, #24196).
 
 wxOSX:
 
